--- a/src/routes/ProductPage/ProductPage.module.scss
+++ b/src/routes/ProductPage/ProductPage.module.scss
@@ -63,8 +63,22 @@
         }
 
         &__price{
-            font-weight: 600;
+            font-weight: 700;
             font-size: 1.4em;
+            display: flex;
+            flex-direction: column;
+
+            &__txt{
+                font-family: 'Roboto Condensed', sans-serif;
+                font-weight: 600;
+                font-size: 20px;
+                line-height: 20px;
+                line-height: 85%;
+            }
+
+            &__value{
+            }
+            
         }
 
         &__btn{
